# unitree-D1-550-Robot-ARM

./: .gitignore  README.md
camera/: README.md  identify_camera.py  identify_usb_camera.py  test_camera.py
d1_550_description/: CMakeLists.txt  README.md  build_simulation.sh  demo_movement.py  package.xml  run_demo.sh  run_simulation.sh  urdf.rviz
d1_550_description/launch/: display.launch.py
d1_550_description/scripts/: environment_publisher.py
d1_550_description/urdf/: d1_550_description.urdf.xacro
d1_sdk/: CMakeLists.txt  run_with_dds.sh  setup_network.sh
d1_sdk/src/: joint_angle_control.cpp  pick_and_place.cpp
d1_sdk/src/examples/: arm_zero_control.cpp  get_arm_joint_angle.cpp  joint_angle_control.cpp  joint_enable_control.cpp  multiple_joint_angle_control.cpp
pick_and_place/: README.md
pick_and_place/implementation/: CMakeLists.txt  README.md  pap_with_trajectory_planning.cpp  pick_and_place  test_single_move.cpp  test_single_move.cpp.backup
pick_and_place/simulation/: README.md  inverse_kinematics_demo.py  pick_place_simulation.py  run_simulation.sh
pick_and_place/simulation/launch/: demo.launch.py  display.launch.py
